Make code better