@@ -1,25 +1,21 @@
 package de.morrisbr.witzlecraft.main;
 
-import java.awt.*;
-import java.awt.image.BufferedImage;
-import java.io.ByteArrayInputStream;
-import java.io.ByteArrayOutputStream;
 import java.io.File;
-import java.io.InputStream;
-import java.net.http.HttpClient;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.List;
 
-import de.morrisbr.witzlecraft.objects.*;
-import de.morrisbr.witzlecraft.pages.RegisterPage;
+import de.morrisbr.witzlecraft.bericht.Bericht;
+import de.morrisbr.witzlecraft.bericht.task.Task;
+import de.morrisbr.witzlecraft.bericht.task.elements.ByteImage;
+import de.morrisbr.witzlecraft.utils.JsonConverter;
+import de.morrisbr.witzlecraft.services.BerichtService;
+import de.morrisbr.witzlecraft.services.TaskService;
 import gg.jte.ContentType;
 import gg.jte.TemplateEngine;
 import gg.jte.resolve.DirectoryCodeResolver;
 import io.javalin.Javalin;
-import io.javalin.core.util.FileUtil;
 import io.javalin.http.staticfiles.Location;
 import io.javalin.plugin.rendering.template.JavalinJte;
 
@@ -27,20 +23,23 @@ import javax.imageio.ImageIO;
 
 public class Main {
 
-    public static void main(String[] args) {
+	private Javalin app;
+	private String ressourcePath;
+	private int port;
 
-		
-        Javalin app = Javalin.create().start(82);
+	private BerichtService berichtService;
 
-		app.config.addStaticFiles("resources/OnlineBanking", Location.EXTERNAL);
+	public Main(int port, String ressourcePath) {
+		this.port = port;
+		this.ressourcePath = ressourcePath;
+		this.berichtService = new BerichtService();
+	}
 
+	public void start() {
+		this.app = Javalin.create().start(port);
+		app.config.addStaticFiles(ressourcePath, Location.EXTERNAL);
 		//app.config.addStaticFiles("C:/Users/MorrisBrandt/Desktop/Test", Location.EXTERNAL);
-
-        DirectoryCodeResolver codeResolver = new DirectoryCodeResolver(Paths.get("resources/OnlineBanking"));
-        TemplateEngine engine = TemplateEngine.create(codeResolver, ContentType.Html);
-        engine.createPrecompiled(Path.of("jte-classes"), ContentType.Html);
-        JavalinJte.configure(engine);
-
+		DirectoryCodeResolver codeResolver = new DirectoryCodeResolver(Paths.get(ressourcePath));
 
 		//app.post("/uploadImage", ctx -> {
 		//	ctx.uploadedFiles("files").forEach(uploadedFile -> {
@@ -55,29 +54,22 @@ public class Main {
 
 		app.get("/get", ctx -> {
 			String name = ctx.queryParam("name");
-
 			//TaskService.getTaskAsObject("test").getImage().saveImage("test.png");
 		});
 
 		app.get("/createTask", ctx -> {
 			String name = ctx.queryParam("name");
-
-			ByteImage byteImage = new ByteImage(ByteImage.toByteArray(ImageIO.read(new File("resources/OnlineBanking/tasks/img/test.png")), "png"));
-
+			ByteImage byteImage = new ByteImage(ByteImage.toByteArray(ImageIO.read(new File(ressourcePath + "/tasks/img/test.png")), "png"));
 			Task task = new Task(name);
 			//task.setImage(byteImage);
-
-			JsonConverter.objectToJsonFile("resources/OnlineBanking/tasks/" + name + ".json", task);
+			JsonConverter.objectToJsonFile(ressourcePath + "/tasks/" + name + ".json", task);
 		});
 
 		app.post("/createBericht", ctx -> {
 			String name = ctx.queryParam("name");
-
 			System.out.println("_-_-_-_-_-_-_____>" + ctx.body());
 			Bericht bericht = (Bericht) JsonConverter.jsonStringToObject(ctx.body(), Bericht.class);
-
-			JsonConverter.objectToJsonFile("resources/OnlineBanking/berichte/" + bericht.getTitle() + ".json", bericht);
-
+			JsonConverter.objectToJsonFile(ressourcePath + "/berichte/" + bericht.getTitle() + ".json", bericht);
 			//Bericht bericht = new Bericht(name);
 			//DayBericht dayBericht = new DayBericht(name);
 			//dayBericht.addTask(new Task(name), name + " Content");
@@ -91,43 +83,36 @@ public class Main {
 			//task.setImage(byteImage);
 
 			//JsonConverter.objectToJsonFile("resources/OnlineBanking/berichte/" + bericht.getTitle() + ".json", bericht);
+		});
 
+		//PASS AUF DAS BEFOR EDITING DER BERICHT AUCH WIRKLICH EXISTIERT
+		//Berichte werden nie umbenannt, deshalb haben die immer die selben name, aber VTL statt namen eine UUID
+		app.post("/editBericht", ctx -> {
+			String name = ctx.queryParam("name");
+			System.out.println("_-_-_-_-_-_-_____>" + ctx.body());
+			Bericht bericht = (Bericht) JsonConverter.jsonStringToObject(ctx.body(), Bericht.class);
+			bericht.delete();
+			JsonConverter.objectToJsonFile(ressourcePath + "/berichte/" + bericht.getTitle() + ".json", bericht);
 		});
 
 		app.get("/getBericht", ctx -> {
 			String name = ctx.queryParam("name");
-
-
-			Bericht bericht = (Bericht) JsonConverter.jsonFileToObject("resources/OnlineBanking/berichte/" + name + ".json", Bericht.class);
-
-
+			Bericht bericht = (Bericht) JsonConverter.jsonFileToObject(ressourcePath + "/berichte/" + name + ".json", Bericht.class);
 			ctx.json(bericht);
 		});
+
 		app.get("/removeBericht", ctx -> {
 			String name = ctx.queryParam("name");
-
-			BerichtService.getBerichtAsObject(name).delete();
+			berichtService.getBerichtAsObject(name).delete();
 		});
 
 		app.get("/getAllBerichte", ctx -> {
-			List<Bericht> berichte = BerichtService.getAllBerichteAsObject();
+			List<Bericht> berichte = berichtService.getAllBerichteAsObject();
 			ctx.json(berichte);
 		});
+	}
 
-		app.get("/login", ctx -> {
-			RegisterPage page = new RegisterPage();
-			page.setCode("443w53453465436456");
-			ctx.render("login.jte", Collections.singletonMap("page", page));
-		});
-
-		
-		
-
-		
-
-
-
-        
+    public static void main(String[] args) {
+		new Main(82, "resources/OnlineBanking").start();
     }
-
 }
